--- a/app/src/main/res/layout/rv_item_bottom.xml
+++ b/app/src/main/res/layout/rv_item_bottom.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
     android:padding="10dp"
     app:elevation="0dp">
 
@@ -61,7 +60,8 @@
             android:layout_marginTop="3dp"
             android:layout_marginBottom="15dp"
             android:fontFamily="@font/sf_pro_display"
-            android:text="$6000"
+            android:scrollbarStyle="outsideInset"
+            android:text="1200 ₽"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -75,7 +75,7 @@
             android:layout_marginTop="3dp"
             android:layout_marginBottom="15dp"
             android:fontFamily="@font/sf_pro_display"
-            android:text="$600"
+            android:text="600 ₽"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
