--- a/app/src/main/res/layout/rv_item_medium.xml
+++ b/app/src/main/res/layout/rv_item_medium.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/my_card_background"
-    android:elevation="0dp"
-    >
+    android:layout_margin="10dp"
+    android:elevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,66 +14,64 @@
             android:id="@+id/imageRvItem"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvItemName"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="Премиум мебель"
-            app:layout_constraintStart_toEndOf="@id/imageRvItem"
-            app:layout_constraintTop_toTopOf="@id/imageRvItem"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins_light"
-            android:textStyle="bold"
+            android:text="Премиум мебель"
             android:textColor="@color/black"
-            android:textSize="9sp"/>
+            android:textSize="9sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/imageRvItem"
+            app:layout_constraintTop_toTopOf="@id/imageRvItem" />
 
         <TextView
             android:id="@+id/tvItemPriceOld"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$2000"
-            app:layout_constraintTop_toBottomOf="@id/tvItemName"
-            app:layout_constraintStart_toEndOf="@id/tvItemPrice"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/sf_pro_display"
+            android:text="2000 ₽"
             android:textColor="@color/my_gray700"
             android:textSize="12sp"
-            android:fontFamily="@font/sf_pro_display"
-            android:layout_marginStart="8dp"
-            />
+            app:layout_constraintStart_toEndOf="@id/tvItemPrice"
+            app:layout_constraintTop_toBottomOf="@id/tvItemName" />
 
         <TextView
             android:id="@+id/tvItemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="$1600"
-            app:layout_constraintStart_toStartOf="@id/tvItemName"
-            app:layout_constraintTop_toBottomOf="@id/tvItemName"
-
+            android:fontFamily="@font/sf_pro_display"
+            android:text="1600 ₽"
             android:textColor="@color/black"
+
             android:textSize="12sp"
-            android:fontFamily="@font/sf_pro_display"/>
+            app:layout_constraintStart_toStartOf="@id/tvItemName"
+            app:layout_constraintTop_toBottomOf="@id/tvItemName" />
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btn_see_product"
             android:layout_width="83dp"
             android:layout_height="28dp"
+            android:layout_marginStart="20dp"
             android:background="@drawable/blue_background"
             android:fontFamily="@font/poppins_light"
             android:text="Подробнее"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="10dp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/tvItemName"
-            app:layout_constraintTop_toTopOf="@id/tvItemName"
-            android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="20dp"
-            />
+            app:layout_constraintStart_toEndOf="@id/tvItemName"
+            app:layout_constraintTop_toTopOf="@id/tvItemName" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
