--- a/app/src/main/res/layout/rv_item_top.xml
+++ b/app/src/main/res/layout/rv_item_top.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp"
     app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/my_card_background"
+    app:cardBackgroundColor="@color/white"
     app:cardUseCompatPadding="true"
     >
 
@@ -42,7 +42,7 @@
             android:id="@+id/tvItemPrice"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="$600"
+            android:text="600 ₽"
             app:layout_constraintStart_toStartOf="@id/tvItemName"
             app:layout_constraintTop_toBottomOf="@id/tvItemName"
             android:textColor="@color/black"
