--- a/app/src/main/res/layout/rv_item_medium.xml
+++ b/app/src/main/res/layout/rv_item_medium.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    android:backgroundTint="@color/my_card_background"
     android:elevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="88dp">
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/imageRvItem"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="8dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,14 +55,13 @@
             android:fontFamily="@font/sf_pro_display"
             android:text="1600 ₽"
             android:textColor="@color/black"
-
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@id/tvItemName"
             app:layout_constraintTop_toBottomOf="@id/tvItemName" />
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btn_see_product"
-            android:layout_width="83dp"
+            android:layout_width="80dp"
             android:layout_height="28dp"
             android:layout_marginStart="20dp"
             android:background="@drawable/blue_background"
