--- a/app/src/main/res/layout/rv_item_top.xml
+++ b/app/src/main/res/layout/rv_item_top.xml
@@ -3,9 +3,9 @@
     android:layout_width="230dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="0dp"
+    app:cardElevation="2dp"
     app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/white"
+    app:cardBackgroundColor="@color/my_card_background"
     app:cardUseCompatPadding="true"
     >
 
@@ -17,6 +17,7 @@
             android:id="@+id/image_rv_item"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="16dp"
