--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="my_dark_blue">#000759</color>
     <color name="my_blue_gray200">#97AABD</color>
     <color name="my_light_red">#FF9999</color>
-    <color name="my_card_background">#FAFDFF</color>
+    <color name="my_card_background">#F7F7F7</color>
     <color name="my_search_and_icons">#FAFBFC</color>
     <color name="my_line">#E9EAEC</color>
     <color name="my_blue100">#B8D9FA</color>
