--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -157,7 +157,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="20dp"
-            android:text="@string/login_account"
+            android:text="@string/addCart"
             app:spinning_bar_color="@color/white"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
