--- a/app/src/main/res/navigation/shopping_graf.xml
+++ b/app/src/main/res/navigation/shopping_graf.xml
@@ -9,12 +9,20 @@
         android:id="@+id/homeFragment"
         android:name="su.afk.commercemvvm.fragments.shopping.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_detailProductFragment"
+            app:destination="@id/detailProductFragment" />
+    </fragment>
     <fragment
         android:id="@+id/cartFragment"
         android:name="su.afk.commercemvvm.fragments.shopping.CartFragment"
         android:label="CardFragment"
-        tools:layout="@layout/fragment_cart"/>
+        tools:layout="@layout/fragment_cart">
+        <action
+            android:id="@+id/action_cartFragment_to_detailProductFragment"
+            app:destination="@id/detailProductFragment" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="su.afk.commercemvvm.fragments.shopping.ProfileFragment"
@@ -24,5 +32,18 @@
         android:id="@+id/searchFragment"
         android:name="su.afk.commercemvvm.fragments.shopping.SearchFragment"
         android:label="SearchFragment"
-        tools:layout="@layout/fragment_search"/>
+        tools:layout="@layout/fragment_search">
+        <action
+            android:id="@+id/action_searchFragment_to_detailProductFragment"
+            app:destination="@id/detailProductFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailProductFragment"
+        android:name="su.afk.commercemvvm.fragments.shopping.DetailProductFragment"
+        android:label="DetailProductFragment"
+        tools:layout="@layout/fragment_detail_product">
+        <argument
+            android:name="product"
+            app:argType="su.afk.commercemvvm.data.models.Product" />
+    </fragment>
 </navigation>
