--- a/app/src/main/res/navigation/shopping_graf.xml
+++ b/app/src/main/res/navigation/shopping_graf.xml
@@ -34,6 +34,9 @@
         <action
             android:id="@+id/action_profileFragment_to_addressFragment"
             app:destination="@id/addressFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_accountOptionsFragment2"
+            app:destination="@id/accountOptionsFragment2" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
@@ -74,4 +77,9 @@
             android:id="@+id/action_billingFragment_to_addressFragment"
             app:destination="@id/addressFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/accountOptionsFragment2"
+        android:name="su.afk.commercemvvm.fragments.loginRegister.AccountOptionsFragment"
+        android:label="AccountOptionsFragment"
+        tools:layout="@layout/fragment_user_account"/>
 </navigation>
