--- a/app/src/main/res/layout/rv_cart_product_item.xml
+++ b/app/src/main/res/layout/rv_cart_product_item.xml
@@ -116,7 +116,8 @@
             android:id="@+id/tvCartSize"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="XL"
+            android:text="4"
+            android:gravity="center"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="@id/imageCartSize"
