--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,7 +32,7 @@
                 android:paddingStart="20dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:text="Поиск"
+                android:text="Not Ready"
                 android:textColor="@color/my_gray500"
                 android:textSize="16sp"
 
@@ -67,13 +67,6 @@
             android:layout_width="10dp"
             android:layout_height="match_parent" />
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_microphone"
-            android:background="@drawable/icon_background"
-            android:backgroundTint="@color/my_search_and_icons"
-            android:padding="10dp" />
     </LinearLayout>
 
 
