--- a/app/src/main/res/navigation/shopping_graf.xml
+++ b/app/src/main/res/navigation/shopping_graf.xml
@@ -32,9 +32,6 @@
         android:label="ProfileFragment"
         tools:layout="@layout/fragment_profile">
         <action
-            android:id="@+id/action_profileFragment_to_addressFragment"
-            app:destination="@id/addressFragment" />
-        <action
             android:id="@+id/action_profileFragment_to_allOrdersFragment"
             app:destination="@id/allOrdersFragment" />
         <action
@@ -67,6 +64,11 @@
         android:name="su.afk.commercemvvm.fragments.shopping.AddressFragment"
         android:label="AddressFragment"
         tools:layout="@layout/fragment_address">
+        <argument
+            android:name="address"
+            app:argType="su.afk.commercemvvm.data.models.Address"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/billingFragment"
@@ -82,6 +84,9 @@
         <action
             android:id="@+id/action_billingFragment_to_addressFragment"
             app:destination="@id/addressFragment" />
+        <argument
+            android:name="payment"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/allOrdersFragment"
