--- a/app/src/main/res/layout/fragment_base_category.xml
+++ b/app/src/main/res/layout/fragment_base_category.xml
@@ -15,9 +15,14 @@
             android:id="@+id/promoTovar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/poppins_thin"
+            android:textColor="@color/black"
+            android:textSize="18dp"
+            android:text="Акционные товары"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Товары со скидками"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <androidx.recyclerview.widget.RecyclerView
