--- a/app/src/main/res/layout/rv_item_address.xml
+++ b/app/src/main/res/layout/rv_item_address.xml
@@ -7,13 +7,13 @@
         android:id="@+id/buttonAddress"
         android:layout_width="110dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/unselected_button_background"
         android:clickable="true"
         android:fontFamily="@font/poppins_thin"
         android:text="Домой"
         android:textAllCaps="false"
-        android:layout_marginEnd="10dp"
-        android:textColor="@color/my_blue_gray200"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
